@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed many opcodes so that they work again with the storage scanner
+
 1.18-5.0.9:
 - Fixed 'get ingredients smart'
 - Fixed a few bugs in some of the other crafting opcodes
